--- a/style/style2.css
+++ b/style/style2.css
@@ -49,7 +49,7 @@ header{
     transition: all .3s ease 0s;
 }
 .navbar li a:hover{
-    color: #0088a9;
+    color: #65fe08;
 }
 
 .landingpage{
@@ -82,4 +82,12 @@ img{
     position: absolute;
     top: 0;
     right: 0;
+}
+
+#welcome{
+    background-color: #c23b22;
+}
+#website{
+    background-color: #65fe08;
+    color: #20222e;
 }
