--- a/style/style.css
+++ b/style/style.css
@@ -8,8 +8,17 @@
     
 }
 
+html{
+    height: 100vh;
+    }
+    
+
 body{
-    background-color: #20222e;;
+    width: 100%;
+    height: 100vh;
+    background-color: #20222e;
+    top: 0;
+    bottom: 0;
 }
 li, a {
     font-family: "Montserrat", sans-serif;
@@ -105,4 +114,31 @@ th, td {
 }
 .experience li{
     font-size: 30px;
+}
+
+@media screen and (max-width: 1628px) {
+    main {
+      flex-flow: column nowrap;
+    }
+}
+@media screen and (max-width: 1393px) {
+    .gradient{
+        display:none;
+    }
+    main{
+        font-size: smaller;
+    }
+    img{
+        width: 330px;
+        height: 660px;
+    }
+}
+@media screen and (max-width: 820px) {
+    .container{
+        display:none;
+    }
+    main{
+        font-size: smaller;
+    }
+    
 }
